Added complete service to get Weather information based city Id, also serice create log files under the project.

--- a/prudential-weather-api.business/prudential-weather-api.business.csproj
+++ b/prudential-weather-api.business/prudential-weather-api.business.csproj
@@ -34,6 +34,9 @@
     <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -51,12 +54,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\prudential-weather-api.common\prudential-weather-api.common.csproj">
+      <Project>{00C24706-D1C3-48C5-861F-4A1E44934B7D}</Project>
+      <Name>prudential-weather-api.common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\prudential-weather-api.repository\prudential-weather-api.repository.csproj">
       <Project>{F640BC93-EBE1-4068-9479-3467CE057110}</Project>
       <Name>prudential-weather-api.repository</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
