Added Unit Test cases after testing whole code. Added documentation to make code for readable

--- a/prudential-weather-api/Web.config
+++ b/prudential-weather-api/Web.config
@@ -7,6 +7,7 @@
   <appSettings>
     <add key="OpenWeatherSericeBaseAddress" value="http://api.openweathermap.org/data/2.5/" />
     <add key="OpenWeatherSericeAppId" value="aa69195559bd4f88d79f9aadeb77a8f6" />
+    <add key="LogFilePath" value="C:\WeatherLog" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
